# hide-utils

./: .gitignore  Cargo.toml
hide-utils-core/: Cargo.toml
hide-utils-core/src/: global_args.rs  lib.rs  renaming.rs  search.rs
hider/: Cargo.toml  README.md
hider/src/: args.rs  err.rs  main.rs  renaming.rs
src/: args.rs  main.rs  search.rs
with-hide/: Cargo.toml
with-hide/src/: args.rs  main.rs
