[package]
name = "hider"
version = "1.0.0"
edition = "2021"
description = "A super simple CLI tool for (un)hiding files"
license = "GPLv3"
homepage = "https://github.com/softwaresale/hider"
repository = "https://github.com/softwaresale/hider"

[dependencies]

hide-utils-core = { path = "../hide-utils-core" }

clap = { version = "4.5.7", features = ["env", "wrap_help", "derive"] }
anyhow = "1.0.86"
log = "0.4.21"
env_logger = "0.11.3"
promptly = "0.3.1"
